버거메뉴 추가
display none

--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@ a {
   text-decoration: none;
 }
 
+.display_none {
+  display: none;
+}
+
 /* navbar------------------------------------------------------ */
 .navbar {
   display: flex;
